# xl-engine

./: .gitignore  Excel Engine - Extended.ipynb  Model Reactions Export - SI.csv  README.md  pyproject.toml
src/xl_engine/: __init__.py  excel_engine.py
tests/: test_excel_engine.py
tests/test_data/: example_wb.xlsx
